--- a/requirements.txt
+++ b/requirements.txt
@@ -60,6 +60,7 @@ rsa==4.7
 scipy~=1.5.4
 scikit-learn>=0.19.1
 setuptools>=41.0.0
+six~=1.15.0
 tblib==1.3.2
 tensorflow>=1.15.5,<2.6
 termcolor==1.1.0
