--- a/requirements.txt
+++ b/requirements.txt
@@ -35,6 +35,7 @@ librosa>=0.8.0
 locket==0.2.0
 Markdown==2.6.11
 mccabe==0.6.1
+networkx>=2.6
 msgpack-python==0.5.6
 numba>=0.50.0
 numpy~=1.19.2
@@ -58,11 +59,11 @@ requests~=2.25.1
 requests-oauthlib==1.3.0
 rsa==4.7
 scipy~=1.5.4
-scikit-learn>=0.19.1
+scikit-learn~=0.24.2
 setuptools>=41.0.0
 six~=1.15.0
 tblib==1.3.2
-tensorflow>=1.15.5,<2.6
+tensorflow>=1.15.5,<2.7
 termcolor==1.1.0
 toml==0.10.0
 toolz==0.9.0
