--- a/.github/workflows/ci-pipeline.yml
+++ b/.github/workflows/ci-pipeline.yml
@@ -36,7 +36,7 @@ jobs:
           pycodestyle subaligner tests examples misc bin/subaligner bin/subaligner_1pass bin/subaligner_2pass bin/subaligner_batch bin/subaligner_convert bin/subaligner_train  bin/subaligner_tune setup.py --ignore=E203,E501,W503 --exclude="subaligner/lib"
       - name: Unit tests and coverage
         run: |
-          MAX_WORKERS=1 coverage run -m unittest discover
+          coverage run -m unittest discover
           coverage combine
           coverage xml
           bash <(curl -s https://codecov.io/bash)
