--- a/.github/workflows/dockerhub.yml
+++ b/.github/workflows/dockerhub.yml
@@ -1,9 +1,6 @@
 name: Docker Hub
 
 on:
-  push:
-    tags:
-      - 'v*'
   release:
     types: [ published ]
   workflow_dispatch:
@@ -32,6 +29,14 @@ jobs:
         uses: docker/metadata-action@v3
         with:
           images: baxtree/subaligner:latest
+      
+      - name: Extract tag name
+        id: tag
+        uses: actions/github-script@0.2.0
+        with:
+          github-token: ${{ github.token }}
+          script: |
+            return context.payload.ref.replace(/\/refs\/tags\//, '');
 
       - name: Build and push the latest image
         id: docker_build
@@ -40,7 +45,7 @@ jobs:
           context: ./docker
           file: "./docker/Dockerfile-Ubuntu20"
           build-args: |
-            RELEASE_VERSION=${{ github.ref }}
+            RELEASE_VERSION=${{ steps.tag.outputs.result }}
           allow: network.host
           github-token: ${{ github.token }}
           tags: baxtree/subaligner:latest
