--- a/docker/Dockerfile-Ubuntu20
+++ b/docker/Dockerfile-Ubuntu20
@@ -7,7 +7,7 @@ ENV DEBIAN_FRONTEND=noninteractive
 ENV TZ=Europe/London
 ENV RELEASE_VERSION=$RELEASE_VERSION
 
-RUN ["/bin/bash", "-c", "apt-get -y update &&\
+RUN apt-get -y update &&\
     apt-get -y install ffmpeg &&\
     apt-get -y install espeak libespeak1 libespeak-dev espeak-data &&\
     apt-get -y install libsndfile-dev &&\
@@ -15,4 +15,4 @@ RUN ["/bin/bash", "-c", "apt-get -y update &&\
     apt-get -y install python3-tk &&\
     apt-get -y install python3-pip &&\
     python3 -m pip install --upgrade pip &&\
-    python3 -m pip install 'subaligner[harmony]==${RELEASE_VERSION:1}'"]
+    python3 -m pip install 'subaligner[harmony]==${RELEASE_VERSION:1}'
