--- a/docker/Dockerfile-Ubuntu20
+++ b/docker/Dockerfile-Ubuntu20
@@ -1,7 +1,7 @@
 # Subaligner Ubuntu 20 Docker Image
 FROM ubuntu:20.10
 
-ARG RELEASE_VERSION
+ARG RELEASE_VERSION 
 
 ENV DEBIAN_FRONTEND=noninteractive
 ENV TZ=Europe/London
@@ -15,4 +15,4 @@ RUN apt-get -y update &&\
     apt-get -y install python3-tk &&\
     apt-get -y install python3-pip &&\
     python3 -m pip install --upgrade pip &&\
-    python3 -m pip install 'subaligner[harmony]==${RELEASE_VERSION}'
+    python3 -m pip install 'subaligner[harmony]==$RELEASE_VERSION'
