--- a/docker/Dockerfile-Ubuntu20
+++ b/docker/Dockerfile-Ubuntu20
@@ -1,14 +1,13 @@
 # Subaligner Ubuntu 20 Docker Image
-ARG RELEASE_VERSION 
-
 FROM ubuntu:20.10
-ARG RELEASE_VERSION
-ENV RELEASE_VERSION=${RELEASE_VERSION}
 
+ARG RELEASE_VERSION
+
+ENV RELEASE_VERSION=v0.2.1
 ENV DEBIAN_FRONTEND=noninteractive
 ENV TZ=Europe/London
 
-RUN apt-get -y update &&\
+RUN ["/bin/bash", "-c", "apt-get -y update &&\
     apt-get -y install ffmpeg &&\
     apt-get -y install espeak libespeak1 libespeak-dev espeak-data &&\
     apt-get -y install libsndfile-dev &&\
@@ -16,4 +15,4 @@ RUN apt-get -y update &&\
     apt-get -y install python3-tk &&\
     apt-get -y install python3-pip &&\
     python3 -m pip install --upgrade pip &&\
-    python3 -m pip install 'subaligner[harmony]==${RELEASE_VERSION}'
+    python3 -m pip install 'subaligner[harmony]==${RELEASE_VERSION:1}'"]
