--- a/docker/Dockerfile-CentOS8
+++ b/docker/Dockerfile-CentOS8
@@ -18,4 +18,5 @@ RUN ["/bin/bash", "-c", "dnf install -y epel-release dnf-utils &&\
     dnf install -y python3-devel &&\
     dnf install -y python3-pip &&\
     pip3 install --upgrade pip &&\
+    python3 -m pip install 'subaligner==${RELEASE_VERSION:1}' &&\
     python3 -m pip install 'subaligner[harmony]==${RELEASE_VERSION:1}'"]
