--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -8,7 +8,9 @@ line-profiler==3.1.0
 scikit-build==0.11.1
 radish-bdd~=0.13.3
 pex==2.1.34
-mypy==0.910
+mypy==0.931
+types-requests==2.27.9
+types-setuptools==57.4.9
 parameterized==0.8.1
 pylint~=2.8.2
 pygments==2.7.4
