--- a/docker/Dockerfile-ArchLinux
+++ b/docker/Dockerfile-ArchLinux
@@ -1,16 +1,9 @@
 # ArchLinux base
-FROM archlinux:base-20211024.0.37588
+FROM archlinux:base
 
 ARG RELEASE_VERSION
 
 ENV RELEASE_VERSION=${RELEASE_VERSION}
-
-# WORKAROUND for glibc 2.33 and old Docker
-# See https://github.com/actions/virtual-environments/issues/2658
-# Thanks to https://github.com/lxqt/lxqt-panel/pull/1562
-RUN patched_glibc=glibc-linux4-2.33-4-x86_64.pkg.tar.zst && \
-    curl -LO "https://repo.archlinuxcn.org/x86_64/$patched_glibc" && \
-    bsdtar -C / -xvf "$patched_glibc"
 
 RUN ["/bin/bash", "-c", "pacman --noconfirm -Sy gcc ffmpeg espeak &&\
     pacman --noconfirm -Sy libsndfile &&\
