--- a/.github/workflows/ci-pipeline.yml
+++ b/.github/workflows/ci-pipeline.yml
@@ -33,7 +33,7 @@ jobs:
           pip install -e . --ignore-installed
       - name: Type checking
         run: |
-          python -m mypy --follow-imports=skip subaligner
+          python -m mypy --follow-imports=normal subaligner
       - name: Linting
         run: |
           pycodestyle subaligner tests examples misc bin/subaligner bin/subaligner_1pass bin/subaligner_2pass bin/subaligner_batch bin/subaligner_convert bin/subaligner_train  bin/subaligner_tune setup.py --ignore=E203,E501,W503 --exclude="subaligner/lib"
