--- a/Pipfile
+++ b/Pipfile
@@ -62,7 +62,7 @@ Markdown = "==2.6.11"
 mccabe = "==0.6.1"
 msgpack-python = "==0.5.6"
 numba = ">=0.50.0"
-numpy = "~=1.19.2"
+numpy = "<1.23.0"
 oauthlib = "==3.1.0"
 pbr = "==4.0.2"
 pluggy = "==0.13.1"
@@ -91,7 +91,7 @@ sentencepiece = "~=0.1.95"
 setuptools = ">=41.0.0"
 six = "~=1.15.0"
 tblib = "==1.3.2"
-tensorflow = ">=1.15.5,<2.6"
+tensorflow = ">=1.15.5,<2.8"
 termcolor = "==1.1.0"
 toml = "==0.10.0"
 toolz = "==0.9.0"
