--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -11,6 +11,7 @@ pex==2.1.34
 mypy==0.931
 types-requests==2.27.9
 types-setuptools==57.4.9
+typing-extensions<4.0.0
 parameterized==0.8.1
 pylint~=2.8.2
 pygments==2.7.4
