--- a/requirements.txt
+++ b/requirements.txt
@@ -38,7 +38,7 @@ mccabe==0.6.1
 networkx>=2.5.1
 msgpack-python==0.5.6
 numba>=0.50.0
-numpy~=1.19.2
+numpy<1.23.0
 oauthlib==3.1.0
 pbr==4.0.2
 pluggy==0.13.1
@@ -63,12 +63,11 @@ scikit-learn~=0.24.2
 setuptools>=41.0.0
 six~=1.15.0
 tblib==1.3.2
-tensorflow>=1.15.5,<2.7
+tensorflow>=1.15.5,<2.8
 termcolor==1.1.0
 toml==0.10.0
 toolz==0.9.0
 tornado==5.1.0
-typing-extensions~=3.7.0
 urllib3~=1.26.5
 Werkzeug>=0.15.3
 zict==0.1.3
