--- a/Pipfile
+++ b/Pipfile
@@ -13,7 +13,7 @@ snakeviz = "==2.1.0"
 line-profiler = "==3.0.2"
 scikit-build = "==0.11.1"
 radish-bdd = "~=0.13.3"
-pex = "==2.1.15"
+pex = "<=2.1.80"
 mypy = "==0.790"
 parameterized = "==0.8.1"
 pylint = "~=2.8.2"
@@ -45,7 +45,7 @@ google-auth-oauthlib = "==0.4.2"
 google-pasta = "~=0.2"
 graphviz = "==0.8.3"
 HeapDict = "==1.0.0"
-h5py = "~=2.10.0"
+h5py = "<=3.6.0"
 html5lib = "==1.0b9"
 hyperopt = "==0.2.4"
 idna = "==2.8"
@@ -62,7 +62,7 @@ Markdown = "==2.6.11"
 mccabe = "==0.6.1"
 msgpack-python = "==0.5.6"
 numba = ">=0.50.0"
-numpy = "<1.23.0"
+numpy = "<1.24.0"
 oauthlib = "==3.1.0"
 pbr = "==4.0.2"
 pluggy = "==0.13.1"
@@ -77,7 +77,7 @@ pylint = "==2.5.0"
 pyparsing = "==2.2.0"
 pyprof2calltree = "==1.4.3"
 pysrt = "==1.1.1"
-pysubs2 = "==0.2.4"
+pysubs2 = "<=1.4.2"
 pystack-debugger = "==0.8.0"
 python-dateutil = "==2.7.2"
 pytz = "==2018.4"
@@ -85,17 +85,17 @@ PyYAML = ">=4.2b1"
 requests = "~=2.25.1"
 requests-oauthlib = "==1.3.0"
 rsa = "==4.7"
-scipy = "~=1.5.4"
+scipy = "<=1.8.1"
 scikit-learn = ">=0.19.1"
 sentencepiece = "~=0.1.95"
 setuptools = ">=41.0.0"
 six = "~=1.15.0"
 tblib = "==1.3.2"
-tensorflow = ">=1.15.5,<2.8"
+tensorflow = ">=1.15.5,<2.9"
 termcolor = "==1.1.0"
 toml = "==0.10.0"
 toolz = "==0.9.0"
-torch = "~=1.8.1"
+torch = "<=1.12.0"
 tornado = "==5.1.0"
 transformers = "~=4.5.1"
 typing-extensions = "~=3.7.0"
