--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -7,7 +7,7 @@ snakeviz==2.1.0
 line-profiler==3.1.0
 scikit-build==0.11.1
 radish-bdd~=0.13.3
-pex==2.1.34
+pex<=2.1.80
 mypy==0.931
 types-requests==2.27.9
 types-setuptools==57.4.9
