--- a/requirements.txt
+++ b/requirements.txt
@@ -21,7 +21,7 @@ google-auth-oauthlib==0.4.2
 google-pasta~=0.2
 graphviz==0.8.3
 HeapDict==1.0.0
-h5py~=3.1.0
+h5py<=3.6.0
 html5lib==1.0b9
 hyperopt==0.2.4
 idna==2.8
@@ -38,7 +38,7 @@ mccabe==0.6.1
 networkx>=2.5.1
 msgpack-python==0.5.6
 numba>=0.50.0
-numpy<1.23.0
+numpy<1.24.0
 oauthlib==3.1.0
 pbr==4.0.2
 pluggy==0.13.1
@@ -51,19 +51,19 @@ pydot-ng==1.0.0
 pydotplus==2.0.2
 pyprof2calltree==1.4.3
 pysrt==1.1.1
-pysubs2==0.2.4
+pysubs2<=1.4.2
 pystack-debugger==0.8.0
 pytz==2018.4
 PyYAML>=4.2b1
 requests~=2.25.1
 requests-oauthlib==1.3.0
 rsa==4.7
-scipy~=1.5.4
+scipy<=1.8.1
 scikit-learn~=0.24.2
 setuptools>=41.0.0
 six~=1.15.0
 tblib==1.3.2
-tensorflow>=1.15.5,<2.8
+tensorflow>=1.15.5,<2.9
 termcolor==1.1.0
 toml==0.10.0
 toolz==0.9.0
