--- a/Pipfile
+++ b/Pipfile
@@ -39,7 +39,7 @@ Cython = "~=0.29.22"
 dask = "<2022.1.0"
 decorator = "==4.3.0"
 distributed = "==1.13.0"
-filelock = "==3.0.12"
+filelock = "<4.0.0"
 google-auth = "==1.27.0"
 google-auth-oauthlib = "==0.4.2"
 google-pasta = "~=0.2"
