--- a/Pipfile
+++ b/Pipfile
@@ -97,7 +97,7 @@ toml = "==0.10.0"
 toolz = "==0.9.0"
 torch = "<=1.12.0"
 tornado = "==5.1.0"
-transformers = "~=4.5.1"
+transformers = "<4.27.0"
 typing-extensions = "~=3.7.0"
 urllib3 = "~=1.26.5"
 Werkzeug = ">=0.15.3"
