--- a/.github/workflows/dockerhub.yml
+++ b/.github/workflows/dockerhub.yml
@@ -60,30 +60,30 @@ jobs:
           tags: baxtree/subaligner:${{ steps.tag.outputs.TAG }}.u20
           push: true
 
-      - name: Build and push the Fedora 31 image
-        id: docker_build_fed31
-        uses: docker/build-push-action@v2
-        with:
-          context: ./docker
-          file: "./docker/Dockerfile-Fedora31"
-          build-args: |
-            "RELEASE_VERSION=${{ steps.tag.outputs.TAG }}"
-          allow: network.host
-          github-token: ${{ github.token }}
-          tags: baxtree/subaligner:${{ steps.tag.outputs.TAG }}.fed31
-          push: true
+#      - name: Build and push the Fedora 37 image
+#        id: docker_build_fed37
+#        uses: docker/build-push-action@v2
+#        with:
+#          context: ./docker
+#          file: "./docker/Dockerfile-Fedora37"
+#          build-args: |
+#            "RELEASE_VERSION=${{ steps.tag.outputs.TAG }}"
+#          allow: network.host
+#          github-token: ${{ github.token }}
+#          tags: baxtree/subaligner:${{ steps.tag.outputs.TAG }}.fed37
+#          push: true
 
-      - name: Build and push the Debian 10 image
-        id: docker_build_deb10
+      - name: Build and push the Debian 11 image
+        id: docker_build_deb11
         uses: docker/build-push-action@v2
         with:
           context: ./docker
-          file: "./docker/Dockerfile-Debian10"
+          file: "./docker/Dockerfile-Debian11"
           build-args: |
             "RELEASE_VERSION=${{ steps.tag.outputs.TAG }}"
           allow: network.host
           github-token: ${{ github.token }}
-          tags: baxtree/subaligner:${{ steps.tag.outputs.TAG }}.deb10
+          tags: baxtree/subaligner:${{ steps.tag.outputs.TAG }}.deb11
           push: true
 
       - name: Build and push the ArchLinux image
